fixed radio button alignment by float left

--- a/project/static/css/style.css
+++ b/project/static/css/style.css
@@ -28,6 +28,10 @@ div#blackout-screen {
   display: none;
 }
 
+.left-float {
+  float: left;
+}
+
 .form-signin {
   max-width: 330px;
   padding: 15px;
